# rusty-diary

./: Cargo.toml  README.md
.github/workflows/: build.yml  publish.yml  rust.yml
src/: config.rs  error.rs  lib.rs  main.rs
src/diary/: file.rs  mod.rs  processor.rs
src/storage/: db.rs  mod.rs  models.rs
test-files/: 2024-02-02.md  2024-02-03.md  2024-02-04.md
